
version 2.15.3 (2014-03-08)
    * Ensures case insensitive comparison of access token types.
    * Updates the OpenID Connect specification references to the final 1.0
      release from 2014-02-25.

version 3.0 (2014-03-27)
    * Replaces java.net.URL representations with java.net.URI where URL is not
      directly required (see issues 79 and 80).

version 3.0.1 (2014-04-08)
    * Upgrades Nimbus JOSE + JWT dependency to 2.24.
    * Upgrades Apache Commons Lang dependency to 3.3.1.
    * Upgrades Apache Commons Codec dependency to 1.9.

version 3.0.2 (2014-04-23)
    * Upgrades Nimbus JOSE + JWT dependency to 2.25.

version 3.1 (2014-04-24)
    * Adds static ClientAuthenticationMethod.parse(String) method.

version 3.2 (2014-04-28)
    * Upgrades source and compile target to Java 7.
    * Fixes NullPointerException in OIDCProviderMetadata.toJSONObject() method.

version 3.3 (2014-06-10)
    * Upgrades OAuth 2.0 client registration to draft-ietf-oauth-dyn-reg-17
      and draft-ietf-oauth-dyn-reg-management-01, adds support for software
      statements.
    * Upgrades Nimbus JOSE + JWT dependency to 2.26.
    * Fixes affecting HTTP POST parameter parsing.
    * Corrects return type of AuthenticationRequest.parse(HTTPRequest)
      (issue #83).

version 3.4 (2014-07-16)
    * Upgrades OAuth 2.0 client registration to draft-ietf-oauth-dyn-reg-18 and
      draft-ietf-oauth-dyn-reg-management-02.
    * Upgrades Nimbus JOSE + JWT dependency to 2.26.1.
    * Adds TokenEncoding and ClaimsTransport enumerations.
    * Fixes ClientInformation serialisation and parsing of the
      client_secret_expires_at parameter when set to zero (issues #92 and #94).

version 3.4.1 (2014-07-21)
    * Serialises zero client_secret_expires_at as long instead of int.

version 3.5 (2014-08-05)
    * Adds support for HTTP request connect and read timeouts.
    * Adds support for custom parameters in AccessTokenResponse.