@@ -47,6 +47,7 @@
     <li>Dynamic client registration endpoint.</li>
     <li>Authentication (OAuth 2.0 authorisation) endpoint.</li>
     <li>Token endpoint.</li>
+    <li>Token revocation endpoint.</li>
     <li>UserInfo endpoint.</li>
 </ul>
 
